package NDnnProto;


message TStochasticConst {
    optional double Prob = 1;
}

